移动端测试13

--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -6,7 +6,7 @@
         <ul class="visible-links" id="navigation-links">
           <!-- 导航链接将通过JavaScript动态生成 -->
         </ul>
-        <ul class="hidden-links hidden">
+        <ul class="hidden-links">
           <!-- 移动端导航链接将通过JavaScript动态生成 -->
           <li class="language-switcher">
             <button id="lang-toggle" class="lang-toggle-btn" title="切换语言/Switch Language">
